--- a/views/Tienda/Productos.hbs
+++ b/views/Tienda/Productos.hbs
@@ -16,20 +16,103 @@
                     {{> VistaFilaProducto producto}}
                 {{/each}}
             </tbody>
-
         </table>
     </div>
 </div>
 <script>    
-    $('button[id^="btnMenos"]').click(
-        // TODO
-    );
+    $('button[id^="btnMenos"]').click(function() { 
+        const ean = $(this).attr("id").split('-')[1]
+        const lab = $(this).siblings('label')
+        const valueLab = lab.text()
 
-    $('button[id^="btnMas"]').click(
-        // TODO
-    );
+        if (valueLab > 1 ) {
+            $(lab).text(parseInt(valorlab) - 1)
+        } else {
+            $(lab).siblings('button').first().prop('disabled', true)
+        }
+    })
 
-    $('a[id^="btnComprar"]').click(
-        // TODO
+    $('button[id^="btnMas"]').click(function() { 
+        const ean = $(this).attr("id").split('-')[1]
+        const valorlab = parseFloat($(this).siblings('label').text()) + 1
+        //habilitamos boton menos 
+        $(this).siblings('button').first().prop('disabled', false)
+        //modificamos valor del lab
+        $(this).siblings('label').text(valorlab)
+        }   
     )
+
+    /**
+    * añadimos pedido al localStorage 
+    */
+    $('a[id^="btnComprar"]').click(function() {
+        const ean = $(this).attr('id').split('-')[1];
+        const itemPedido = { 
+            ean: $(this).parent().siblings('th').text(),                                                      
+            nombre: $(this).parent().siblings('td').first().text(),                                         
+            precio: parseFloat($(this).parent().siblings('td').eq(3).children('p').first().text()),  
+            cantidad: parseFloat($(`label[id*="${ean}"`).text())   
+        };
+
+        let itemsDelPedido 
+        const pedidoStorage = JSON.parse(localStorage.getItem('pedido'));
+        if (pedidoStorage == null) {
+            //creo key pedido en el localStorage y añado itemPedido a la lista de pedidos
+            itemsDelPedido = [ itemPedido ];
+            localStorage.setItem('pedido', JSON.stringify(itemsDelPedido))
+            
+            _pintarDatosMiniCesta(itemPedido.nombre, itemPedido.cantidad, itemPedido.precio)
+        }
+        else{
+            const itemsDelPedido = JSON.parse(localStorage.getItem('pedido'));
+                
+            //compruebo que si ese item ya existe... entonces incremento cantidad (ojoo!! que la cantidad a añadir pueder ser 1 o mayor)
+            const item = itemsDelPedido.find((item) => item.ean == itemPedido.ean)
+            if (item != null) {
+                item.cantidad += itemPedido.cantidad
+
+                // borramos item para añadirlo con la cantidad actualizada
+                const newArrayItemsPedido = itemsDelPedido.filter(itemDelPedido => itemDelPedido.ean != item.ean)
+                newArrayItemsPedido.push(item)
+
+                localStorage.setItem('pedido', JSON.stringify(newArrayItemsPedido))
+
+                // ojo!! no puedo pintarlo directamente sino crearia una fila duplicada, antes modificar la cantidad
+                $('#itemsMiniCesta').find(`td:contains('${item.nombre}')`).siblings('td').eq(0).text(`${item.cantidad}`)
+            }
+            else {
+                itemsDelPedido.push(itemPedido)
+                localStorage.setItem('pedido', JSON.stringify(itemsDelPedido))
+                
+                _pintarDatosMiniCesta(itemPedido.nombre, itemPedido.cantidad, itemPedido.precio)
+            }
+        }
+    })
+
+    /**
+    * cada vez que haya un cambio en la url /Tienda/Productos/"xxxx" comprobamos
+    * si existe datos del pedido en el localStorage para pintarlo en el layout
+    */
+    $(function checkPedidosEnLocalStorage() {
+        const pedidoStorage = JSON.parse(localStorage.getItem('pedido'));
+        if(pedidoStorage != null) {
+            pedidoStorage.forEach(itemPedido => {
+                _pintarDatosMiniCesta(itemPedido.nombre, itemPedido.precio, itemPedido.cantidad)
+            })
+        };
+    })
+
+    /**
+    *  esta vista se incrusta en el mismo layout, por eso tenemos acceso al DOM del layout
+    */
+    function _pintarDatosMiniCesta(nombre, cantidad, precio) {
+        $('#itemsMiniCesta').append(`<tr>
+            <td>${nombre}</td>
+            <td>${cantidad}</td>
+            <td>${precio}</td>
+            <td><strong>X</strong></td>
+            </tr>`)
+    }           
+
+    // TODO: crear otro objeto en el localStorage para calcular el total del pedido 
 </script>
