--- a/views/Tienda/Productos.hbs
+++ b/views/Tienda/Productos.hbs
@@ -26,7 +26,7 @@
         const valueLab = lab.text()
 
         if (valueLab > 1 ) {
-            $(lab).text(parseInt(valorlab) - 1)
+            $(lab).text(parseInt(valueLab) - 1)
         } else {
             $(lab).siblings('button').first().prop('disabled', true)
         }
@@ -34,11 +34,11 @@
 
     $('button[id^="btnMas"]').click(function() { 
         const ean = $(this).attr("id").split('-')[1]
-        const valorlab = parseFloat($(this).siblings('label').text()) + 1
+        const valueLab = parseFloat($(this).siblings('label').text()) + 1
         //habilitamos boton menos 
         $(this).siblings('button').first().prop('disabled', false)
         //modificamos valor del lab
-        $(this).siblings('label').text(valorlab)
+        $(this).siblings('label').text(valueLab)
         }   
     )
 
@@ -54,25 +54,22 @@
             cantidad: parseFloat($(`label[id*="${ean}"`).text())   
         };
 
-        let itemsDelPedido 
         const pedidoStorage = JSON.parse(localStorage.getItem('pedido'));
         if (pedidoStorage == null) {
             //creo key pedido en el localStorage y añado itemPedido a la lista de pedidos
-            itemsDelPedido = [ itemPedido ];
+            const itemsDelPedido = [ itemPedido ];
             localStorage.setItem('pedido', JSON.stringify(itemsDelPedido))
             
             _pintarDatosMiniCesta(itemPedido.nombre, itemPedido.cantidad, itemPedido.precio)
         }
         else{
-            const itemsDelPedido = JSON.parse(localStorage.getItem('pedido'));
-                
             //compruebo que si ese item ya existe... entonces incremento cantidad (ojoo!! que la cantidad a añadir pueder ser 1 o mayor)
-            const item = itemsDelPedido.find((item) => item.ean == itemPedido.ean)
+            const item = pedidoStorage.find((item) => item.ean == itemPedido.ean)
             if (item != null) {
                 item.cantidad += itemPedido.cantidad
 
                 // borramos item para añadirlo con la cantidad actualizada
-                const newArrayItemsPedido = itemsDelPedido.filter(itemDelPedido => itemDelPedido.ean != item.ean)
+                const newArrayItemsPedido = pedidoStorage.filter(itemDelPedido => itemDelPedido.ean != item.ean)
                 newArrayItemsPedido.push(item)
 
                 localStorage.setItem('pedido', JSON.stringify(newArrayItemsPedido))
@@ -81,7 +78,7 @@
                 $('#itemsMiniCesta').find(`td:contains('${item.nombre}')`).siblings('td').eq(0).text(`${item.cantidad}`)
             }
             else {
-                itemsDelPedido.push(itemPedido)
+                pedidoStorage.push(itemPedido)
                 localStorage.setItem('pedido', JSON.stringify(itemsDelPedido))
                 
                 _pintarDatosMiniCesta(itemPedido.nombre, itemPedido.cantidad, itemPedido.precio)
