--- a/views/Pedido/FinalizarPedido.hbs
+++ b/views/Pedido/FinalizarPedido.hbs
@@ -21,7 +21,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {{#each this.pedido.ElementosPedido as |item| }}
+                    {{#each this.pedido.articulos as |item| }}
                         {{>_VistaParcialFinalizarPedido item}}
                     {{/each}}
                 </tbody>
