--- a/views/Tienda/Productos.hbs
+++ b/views/Tienda/Productos.hbs
@@ -12,7 +12,7 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each this.listaproductos as |producto|}}
+                {{#each this.listaProductos as |producto|}}
                     {{> VistaFilaProducto producto}}
                 {{/each}}
             </tbody>
