--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -541,8 +541,7 @@
                 processData: false 	 
             })
             .done((res) => {  
-                //redirigimos 
-                window.location = 'http://localhost:3000/Cliente/Login'
+                console.log('cliente registrado ok')
 			})
             .fail((err) => {
 				// TODO: mostrar en un div en la vista el mensaje de error...
