--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -287,267 +287,17 @@
         </div>
     </div>
     <script>
-        let esDireccionModif = false
-        let esTlfnModif = false
-
-        //----------------------------------- formulario modal -------------------------------------
-        const modalAltaDirecccion = new bootstrap.Modal(document.getElementById('formAltaDir'))
-        $('#botonAltaDir').click(function() { modalAltaDirecccion.show(); esDireccionModif = false })
-        $('#botonCierraModalDir').click(function() { modalAltaDirecccion.hide() })
-
-        const modalAltaTlfn = new bootstrap.Modal(document.getElementById('formAltaTlfno'))
-        $('#botonAltaTlfno').click(function() { modalAltaTlfn.show(); esTlfnModif = false})
-        $('#botonCierraModalTlfno').click(function() { modalAltaTlfn.hide() })
-
-        //--------------------------------- dropdown municipios -------------------------------
-        $('#inputProvincia').change(function(evt) {
-            $('#inputLocalidad > option[value != 0]').remove() 
-
-            const codProv = evt.target.value 
-            if (codProv != "0") {
-                $('#inputLocalidad').removeAttr('disabled')
-                
-                const url = 'http://localhost:3000/api/getMunicipios/' + codProv
-                // peticion ajax 
-                $.get(url)
-                .done((municipio) => municipios.forEach((municipio) => {
-                    $('#inputLocalidad').append('<option value=' + municipio.codMun + '>'+ municipio.nombreMunicipio + '</option>')
-                }))
-                .fail(err => console.log(err))
-            }
-        })
-    
-        //---------------------------- validacion campos en cliente ------------------------------
-        localStorage.clear()
-        //estado de los input obligatorios
-        let estadoCajas = { 'direcciones': false, 'telefonos': false }
-
-        function validar(patron, id){
-            const inputId = $('#' + id).val()
-            const isValid = patron.test(inputId)
-            if (isValid) {
-                estadoCajas[id] = true
-            } else {
-                estadoCajas[id] = false
-            }  
-        }
-
-        $('label')
-        .filter((index, lab) => /^\*(?!Direccion|Nombre via|Telefono).*/.test($(lab).text()))
-        .each((index, lab) => {
-            const attrLabFor = $(lab).attr('for')
-            estadoCajas[attrLabFor] = false                  
-
-            $('input[id="' + $(lab).attr('for') + '"]').blur(function(ev) {   
-                // validar si los campos estan rellenos 
-                const campoCubierto = $(ev.target).val() === undefined || $(ev.target).val() === ''                    
-                if (campoCubierto) {
-                    estadoCajas[$(ev.target).attr('id')] = false
-                } else {
-                    estadoCajas[$(ev.target).attr('id')] = true
-                }
-
-                // validar valor de los campos 
-                switch(attrLabFor) {
-                    case "inputNombre":
-                        validar(/^[a-zA-Z]{1,50}$/, attrLabFor)
-                        break
-                    case "inputIdentif":
-                        switch($('#dropdownTipoIdentif').val()) {
-                            case 'NIF':
-                                validar(/^[0-9]{8}[a-zA-Z]$/, attrLabFor)
-                                break
-                            case 'CIF':
-                                validar(/^[a-zA-Z][0-9]{8}$/, attrLabFor)
-                                break
-                            case 'Pasaporte':
-                                validar(/^[0-9]{9}$/, attrLabFor)
-                                break
-                        }
-                        break
-                    case "inputPassword":
-                    case "inputRePassword":
-                        validar(/^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#\$%\^&\*])(?=.{8,20})/, attrLabFor)
-
-                        const passwordCubierto  = estadoCajas['inputPassword'] === true
-                        const repassworCubierto = estadoCajas['inputRePassword'] === true
-
-                        if (passwordCubierto && repassworCubierto) {
-                            const password   = $('#inputPassword').val()
-                            const repassword = $('#inputRePassword').val()
-                            estadoCajas[attrLabFor] = password === repassword
-                        }    
-                        break
-                    case "inputEmail":
-                    case "inputConfEmail":
-                        const email          = $('#inputEmail').val()
-                        const confirmarEmail = $('#inputConfEmail').val()
-                        estadoCajas[attrLabFor] = email === confirmarEmail
-                        break
-                }
-               
-                // validar si tlfnos y direcciones del dropdown coinciden con el localstorage
-                const numDireccionesStorage = 0
-                const numTelefonosStorage = 0
-                for (let a=0; a<localStorage.length; a++) { 
-                    if ( /^direc-/.test(localStorage.key(a)) ) {
-                        numDireccionesStorage++
-                    }
-                    if ( /^tlfno-/.test(localStorage.key(a)) ) {
-                        numTelefonosStorage++
-                    }
-                }
-                const esDireccionesOk = $('#direcciones option').length === numDireccionesStorage
-                const esTelefonosOk   = $('#telefonos option').length === numTelefonosStorage
-                estadoCajas['direcciones'] = esDireccionesOk
-                estadoCajas['telefonos']   = esTelefonosOk
-                 
-                //comprobamos estado generaral de las cajas, y habilitamos o no el boton:
-                const cajasOk = Object.keys(estadoCajas).some(input => estadoCajas[input] === false) 
-                if (cajasOk) {
-                    $('#btnEnviarAlta').attr('disabled','true')
-                }
-                $('#btnEnviarAlta').removeAttr('disabled')
-            })
-        })
-
-        //------------------------- alta direcciones y tlfnos en localStorage ---------------------
-        const posDireccionModif = 0
-        const posTlfnModif  = 0
-        let contadorDirecciones = 0
-        let contadorTlfnos = 0
-
-        $('#botonAceptarDirec').click(function(ev) {
-            const nuevaDireccion = {}
- 
-            $('div[id="altaDireccion"] label').each((index, lab) => {
-                const attrLabFor = $(lab).attr('for')  
-                if (attrLabFor != "inputEsPrincipal") {
-                    nuevaDireccion[$('#' + attrLabFor).attr('name')] = $('#' + attrLabFor).val()
-                } else {
-                    nuevaDireccion[$('#' + attrLabFor).attr('name')] = $('#' + attrLabFor).is(':checked')
-                }
-            })
-                
-            const esOpcionPorDefecto = $('#direcciones > option').first().val() === "No se han definido direcciones"
-            if (esOpcionPorDefecto) { 
-                $('#direcciones > option').first().remove()
-            }
-            
-            const textoDireccionDropdown = `${nuevaDireccion.tipoVia} ${nuevaDireccion.nombreVia}, ${nuevaDireccion.numeroVia} ${nuevaDireccion.piso}-${nuevaDireccion.puerta} CP: ${nuevaDireccion.cp}`
-            if (esDireccionModif) {
-                localStorage.setItem('direc-' + esTlfnModif, JSON.stringify(nuevaDireccion))
-                $(`#direcciones option[value="${esTlfnModif}"]`).text(textoDireccionDropdown)    
-            } else {
-                localStorage.setItem('direc-' + contadorDirecciones, JSON.stringify(nuevaDireccion))
-                $('#direcciones').append(`<option value="${contadorDirecciones}">${textoDireccionDropdown}</option>`)
-                contadorDirecciones++
-            }
-                
-            //habilitamos botones borrar y modificar direccion...
-            $('#botonModififcarDirec, #botonBorrarDirec').removeAttr('disabled')
-            modalAltaDir.hide()
-        })
-
-        $('#botonAceptarTlfno').click(function(ev) {
-            const nuevoTlfno = {
-                numero:      $('#inputTelefono').val(),
-                esPrincipal: $('#esTlfnoprincipal').is(':checked')
-            }      
-
-            const esOpcionPorDefecto = $('#telefonos > option').first().val() === "No se han definido telefonos"
-            if (esOpcionPorDefecto) { 
-                $('#telefonos > option').first().remove()
-            }
-
-            if (esTlfnModif) {
-                localStorage.setItem('tlfno-' + esTlfnModif, JSON.stringify(nuevoTlfno))
-                $(`#telefonos option[value="${posTlfnModif}"]`).text(nuevoTlfno.numero)                
-            } else {
-                localStorage.setItem('tlfno-' + contadorTlfnos, JSON.stringify(nuevoTlfno))
-                $('#telefonos').append(`<option value="${contadorTlfnos}">${nuevoTlfno.numero}</option>`)
-                contadorTlfnos++
-            }
-
-            $('#botonModififcarTelef, #botonBorrarTelef').removeAttr('disabled')
-            modalAltaTlf.hide()
-        })
-  
-        //---------------------------- TODO: modificar y borrar tlfnos -------------------------------
-        $('#botonModififcarDirec').click(function(ev) {
-            modalAltaDir.show()
-            const numDirecciones   = $('#direcciones').val()
-            const direccionStorage = JSON.parse(localStorage.getItem('direc-' + numDirecciones))
-            
-            esDireccionModif  = true
-            posDireccionModif = parseInt(numDirecciones)
-
-            Object.keys(direccionStorage).forEach((prop) => {
-                switch(prop) {
-                    case 'tipoVia':
-                    case 'codpro':
-                    case 'codmun':
-                        $(`select[name="${prop}"]`).val(direccionStorage[prop])
-                        if (prop == 'codpro') {
-                            document.getElementById('#inputProvincia').dispatchEvent('change')
-                        }
-                        break
-                    default:
-                        $(`input[name="${prop}"]`).val(direccionStorage[prop])
-                        break
-                }  
-            })
-        })
-        
-        //-------------------------------- envio del formulario -----------------------------------------
-        $('button:submit').click(function(evt) {
-            evt.preventDefault()
-            const direcciones = []
-            const telefonos   = [] 
-
-            for(var pos=0; pos<localStorage.length; pos++) {
-                // tenemos almacenado direcciones y telefonos con las keys: "direct-0", "tlfno-0", ....
-                const key = localStorage.key(pos)
-                if (/^direct-/.test(key)) {
-                    direcciones.push(JSON.parse(localStorage[key])) 
-                } 
-                else if (/^tlfno-/.test(key)) {
-                    telefonos.push(JSON.parse(localStorage[key])) 
-                }
-            };
-
-            const cliente = {
-                nombre: $('#inputNombre').val(),
-                primerApellido: $('#inputPrimApe').val(),
-                segundoApellido: $('#inputSecApe').val(),
-                nacimiento: $('#inputFecha').val(),
-                tipoIdentificacion: {
-                    tipoId: $('select[name="tipoId"]').val(), 
-                    numId: $('#inputIdentif').val(),
-                },
-                credenciales: {
-                    email: $('#inputEmail').val(),
-                    password: $('#inputPassword').val(),
-                }
-                telefono: telefonos, 
-                direccion: direcciones,
-            }  
-
-            $.ajax({
-                type: 'POST',
-                url: 'http://localhost:3000/Cliente/Registro',   
-                data: JSON.stringify(cliente),    
-                contentType: 'application/json',  
-                processData: false 	 
-            })
-            .done((res) => {  
-                console.log('cliente registrado ok')
-			})
-            .fail((err) => {
-				// TODO: mostrar en un div en la vista el mensaje de error...
-				console.log(err)
-			})
-        })
+        // variables globales
+        let esDireccionModif  = false
+        let esTlfnModif       = false
+        let posDireccionModif = 0
+        let posTlfnModif      = 0
     </script>
+    <script src="../../public/js/modalRegistro.js"></script>
+    <script src="../../public/js/dropdownMunicipios.js"></script>
+    <script src="../../public/js/validarFormRegistro.js"></script>
+    <script src="../../public/js/añadirDireccionTlfn.js"></script>
+    <script src="../../public/js/modificarDireccionTlfn.js"></script>
+    <script src="../../public/js/envioFormRegistro.js"></script>
 </body>
 </html>
