--- a/views/Tienda/Productos.hbs
+++ b/views/Tienda/Productos.hbs
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 {{#each this.listaProductos as |producto|}}
-                    {{> VistaFilaProducto producto}}
+                    {{> _VistaFilaProducto producto}}
                 {{/each}}
             </tbody>
         </table>
