--- a/views/Tienda/Productos.hbs
+++ b/views/Tienda/Productos.hbs
@@ -25,14 +25,7 @@
 <script src="../../public/js/checkPedidosStorage.js"></script>
 <script>    
     /**
-    *  esta vista se incrusta en el mismo layout, por eso tenemos acceso al DOM del layout
+    *  este mini bloque html se incrusta en el mismo layout, por eso tenemos acceso al DOM del layout
     */
-    function _pintarDatosMiniCesta(nombre, cantidad, precio) {
-        $('#itemsMiniCesta').append(`<tr>
-            <td>${nombre}</td>
-            <td>${cantidad}</td>
-            <td>${precio}</td>
-            <td><strong>X</strong></td>
-            </tr>`)
-    }      
+        
 </script>
