--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -4,10 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registro</title>
+    <!-- estilos y librerias .js bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #006633;">
@@ -77,7 +79,7 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="inputRePassword"><strong>*Confirmacion de contraseña:</strong></label>
-                                <input type="text" class="form-control" id="inputRePassword" name="recontraseña">
+                                <input type="password" class="form-control" id="inputRePassword" name="recontraseña">
                             </div>
                             <div class="form-group col-md-4">
                             </div>
@@ -94,7 +96,7 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <button type="button" id="botonAltaDir" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="exampleModalLabel">ALTA</button>
-                                        <!-- ========================== formulario Modal Alta direcciones ========================== -->
+                                        <!-- ========================== Formulario modal alta direcciones ========================== -->
                                         <div class="modal fade" id="formAltaDir" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-lg" role="document">
                                             <div class="modal-content">
@@ -102,11 +104,11 @@
                                                     <img src="/public/images/formHeaderAltaDireccion.png">
                                                 </div>
                                                 <div class="modal-body" style="background-color: #FFFFee;">
-                                                    <form id="altaDireccion">
+                                                    <div id="altaDireccion">
                                                         <div class="row">
                                                             <div class="form-group col-2">
-                                                                <label for="selectTipoVia" class="form-label"><strong>Tipo de via:</strong></label>
-                                                                <select class="form-control" id="selectTipoVia" name="tipoVia">
+                                                                <label for="inputTipoVia" class="form-label"><strong>Tipo de via:</strong></label>
+                                                                <select class="form-control" id="inputTipoVia" name="tipoVia">
                                                                     <option selected>Calle</option>
                                                                     <option value="avenida">Avenida</option>
                                                                     <option value="plaza">Plaza</option>
@@ -148,7 +150,7 @@
                                                         <div class="row">
                                                             <div class="form-group col-12">
                                                                 <label for="inputObsevaciones" class="form-label"><strong>Observaciones(Texto de ayuda para localizar la direccion):</strong></label>
-                                                                <input type="text" id="inputObservaciones" class="form-control" name="observaciones">
+                                                                <input type="text" class="form-control" id="inputObservaciones" name="observaciones">
                                                             </div>
                                                         </div>
                                                         <div class="row">
@@ -157,7 +159,7 @@
                                                                 <select id="inputProvincia" name="codpro" class="form-control">
                                                                     <option value="0" selected>Elige provincia...</option>
                                                                     {{#each listaProvincias as |provincia|}}
-                                                                        <option value="{{provincia.codPro}}">{{provincia.nombreProvincia}}</option>
+                                                                        <option value="{{provincia.CodPro}}">{{provincia.NombreProvincia}}</option>
                                                                     {{/each}}
                                                                 </select>
                                                             </div>                    
@@ -175,8 +177,8 @@
                                                         <div class="row">
                                                             <div class="form-group col-3">
                                                                 <div class="form-check">
-                                                                    <input type="checkbox" class="form-check-input" id="esprincipal" name="esprincipal">
-                                                                    <label class="form-check-label" for="esprincipal">¿Es direccion de entrega habitual?</label>
+                                                                    <input type="checkbox" class="form-check-input" id="inputEsPrincipal" name="esprincipal">
+                                                                    <label class="form-check-label" for="inputEsPrincipal">¿Es direccion de entrega habitual?</label>
                                                                 </div>                               
                                                             </div>
                                                             <div class="col-9"></div>
@@ -184,11 +186,11 @@
                                                         <div class="row">
                                                             <div class="col-6"></div>
                                                             <div class="col-6">
-                                                                <button type="button" class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
+                                                                <button type="button" id="botonAceptarDirec" class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
                                                                 <button type="button" id="botonCierraModalDir" class="btn btn-outline-secondary">CANCELAR</button>
                                                             </div>
                                                         </div>
-                                                    </form>
+                                                    </div>
                                                 </div>
                                                 <div class="modal-footer">
                                                 </div>
@@ -217,7 +219,7 @@
                                                     <img src="/public/images/formHeaderAltaTelefono.png">
                                                 </div>
                                                 <div class="modal-body" style="background-color: #FFFFee;">
-                                                    <form id="altaTelefono">
+                                                    <div id="altaTelefono">
                                                         <div class="row">
                                                             <div class="form-group col-6">
                                                                 <label for="inputTelefono" class="form-label"><strong>*Telefono:</strong></label>
@@ -229,7 +231,7 @@
                                                             <div class="form-group col-3">
                                                                 <div class="form-check">
                                                                     <input type="checkbox" class="form-check-input" id="esTlfnoprincipal" name="esTlfnoprincipal">
-                                                                    <label class="form-check-label" for="esprincipal">¿Es telefono habitual?</label>
+                                                                    <label class="form-check-label" for="esTlfnoprincipal">¿Es telefono habitual?</label>
                                                                 </div>                               
                                                             </div>
                                                             <div class="col-9"></div>
@@ -237,11 +239,11 @@
                                                         <div class="row">
                                                             <div class="col-6"></div>
                                                             <div class="col-6">
-                                                                <button type="button"  class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
+                                                                <button type="button" id="botonAceptarTlfno" class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
                                                                 <button type="button" id="botonCierraModalTlfno" class="btn btn-outline-secondary">CANCELAR</button>
                                                             </div>
                                                         </div>
-                                                    </form>
+                                                    </div>
                                                 </div>
                                                 <div class="modal-footer">
                                                 </div>
@@ -276,7 +278,7 @@
                         <div class="row">
                             <div class="col-9"></div>
                             <div class="form-group col-3">
-                                <button type="submit" class="btn btn-outline-success">ENVIAR ALTA</button>
+                                <button type="submit" id="btnEnviarAlta" class="btn btn-outline-success">ENVIAR ALTA</button>
                                 <button type="button" class="btn btn-outline-secondary" onclick="javascript:window.location='http://localhost:3000/Cliente/Login'">CERRAR</button>
                             </div>
                         </div>                    
@@ -288,16 +290,18 @@
     </div>
     <script>
         // variables globales
+        const modalAltaDirecccion = new bootstrap.Modal(document.getElementById('formAltaDir'))
+        const modalAltaTlfn = new bootstrap.Modal(document.getElementById('formAltaTlfno'))
         let esDireccionModif  = false
         let esTlfnModif       = false
         let posDireccionModif = 0
         let posTlfnModif      = 0
     </script>
-    <script src="../../public/js/modalRegistro.js"></script>
-    <script src="../../public/js/dropdownMunicipios.js"></script>
-    <script src="../../public/js/validarFormRegistro.js"></script>
-    <script src="../../public/js/añadirDireccionTlfn.js"></script>
-    <script src="../../public/js/modificarDireccionTlfn.js"></script>
-    <script src="../../public/js/envioFormRegistro.js"></script>
+    <script src="/public/js/modalRegistro.js"></script>
+    <script src="/public/js/dropdownMunicipios.js"></script>
+    {{!-- <script src="/public/js/validarFormRegistro.js"></script> --}}
+    <script src="/public/js/añadirDireccionTlfn.js"></script>
+    <script src="/public/js/modificarDireccionTlfn.js"></script>
+    <script src="/public/js/envioFormRegistro.js"></script>
 </body>
 </html>
