--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -149,7 +149,7 @@
                                                         </div>
                                                         <div class="row">
                                                             <div class="form-group col-12">
-                                                                <label for="inputObsevaciones" class="form-label"><strong>Observaciones(Texto de ayuda para localizar la direccion):</strong></label>
+                                                                <label for="inputObservaciones" class="form-label"><strong>Observaciones(Texto de ayuda para localizar la direccion):</strong></label>
                                                                 <input type="text" class="form-control" id="inputObservaciones" name="observaciones">
                                                             </div>
                                                         </div>
@@ -177,7 +177,7 @@
                                                         <div class="row">
                                                             <div class="form-group col-3">
                                                                 <div class="form-check">
-                                                                    <input type="checkbox" class="form-check-input" id="inputEsPrincipal" name="esprincipal">
+                                                                    <input type="checkbox" class="form-check-input" id="inputEsPrincipal" name="esPrincipal">
                                                                     <label class="form-check-label" for="inputEsPrincipal">¿Es direccion de entrega habitual?</label>
                                                                 </div>                               
                                                             </div>
