--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -49,7 +49,7 @@
                             </div>                           
                             <div class="form-group col-md-4">
                                 <label for="inputIdentif"><strong>*Nº Identificacion:</strong></label>
-                                <input type="text" class="form-control" id="inputIdenif" name="numId">
+                                <input type="text" class="form-control" id="inputIdentif" name="numId">
                             </div>
                             <div class="form-group col-md-4">
                                 <div class="form-check">
