--- a/views/shared/Layouts/__Layout.hbs
+++ b/views/shared/Layouts/__Layout.hbs
@@ -113,5 +113,6 @@
     </script>
     <script src="/public/js/treeviewCategorias.js"></script>
     <script src="/public/js/finalizarCompra.js"></script>
+    <script src="/public/js/botonEliminar.js"></script>
 </body>
 </html>
