--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -222,7 +222,7 @@
                                                     <div id="altaTelefono">
                                                         <div class="row">
                                                             <div class="form-group col-6">
-                                                                <label for="inputTelefono" class="form-label"><strong>*Telefono:</strong></label>
+                                                                <label for="inputTelefono" class="form-label"><strong>*Número tlfno:</strong></label>
                                                                 <input type="text" class="form-control" id="inputTelefono" name="numeroTlfno">
                                                             </div>
                                                             <div class="col-6"></div>
@@ -278,7 +278,7 @@
                         <div class="row">
                             <div class="col-9"></div>
                             <div class="form-group col-3">
-                                <button type="submit" id="btnEnviarAlta" class="btn btn-outline-success">ENVIAR ALTA</button>
+                                <button type="submit" id="btnEnviarAlta" class="btn btn-outline-success" disabled>ENVIAR ALTA</button>
                                 <button type="button" class="btn btn-outline-secondary" onclick="javascript:window.location='http://localhost:3000/Cliente/Login'">CERRAR</button>
                             </div>
                         </div>                    
