--- a/views/Cliente/Registro.hbs
+++ b/views/Cliente/Registro.hbs
@@ -22,7 +22,7 @@
         </div>
         <div class="row" style="background-color: #FFFFee;">
             <div class="col-8">
-                <form method="post" action="http://localhost:3000/Cliente/Login">
+                <form>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="form-group col-md-4">
@@ -95,7 +95,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <button type="button" id="botonAltaDir" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="exampleModalLabel">ALTA</button>
+                                    <button type="button" id="btnAltaDireccion" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="exampleModalLabel">ALTA</button>
                                         <!-- ========================== Formulario modal alta direcciones ========================== -->
                                         <div class="modal fade" id="formAltaDir" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-lg" role="document">
@@ -187,7 +187,7 @@
                                                             <div class="col-6"></div>
                                                             <div class="col-6">
                                                                 <button type="button" id="botonAceptarDirec" class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
-                                                                <button type="button" id="botonCierraModalDir" class="btn btn-outline-secondary">CANCELAR</button>
+                                                                <button type="button" id="btnCierraModalDireccion" class="btn btn-outline-secondary">CANCELAR</button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -198,7 +198,7 @@
                                         </div>
                                         </div>
                                         <!-- ======================================================================================== -->
-                                    <button type="button" id="botonModififcarDirec" class="btn btn-outline-success">MODIFICAR</button>
+                                    <button type="button" id="botonModificarDirec" class="btn btn-outline-success">MODIFICAR</button>
                                     <button type="button" id="botonBorrarDirec" class="btn btn-outline-success">BORRAR</button>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <button type="button" id="botonAltaTlfno" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="exampleModalTelef">ALTA</button> 
+                                    <button type="button" id="btnAltaTlfno" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="exampleModalTelef">ALTA</button> 
                                         <!-- ========================== formulario Modal Alta Telefonos ========================== -->
                                         <div class="modal fade" id="formAltaTlfno" tabindex="-1" role="dialog" aria-labelledby="exampleModalTelef" aria-hidden="true">
                                         <div class="modal-dialog modal-lg" role="document">
@@ -240,7 +240,7 @@
                                                             <div class="col-6"></div>
                                                             <div class="col-6">
                                                                 <button type="button" id="botonAceptarTlfno" class="btn btn-outline-success" data-dismiss="modal">ACEPTAR</button>
-                                                                <button type="button" id="botonCierraModalTlfno" class="btn btn-outline-secondary">CANCELAR</button>
+                                                                <button type="button" id="btnCierraModalTlfno" class="btn btn-outline-secondary">CANCELAR</button>
                                                             </div>
                                                         </div>
                                                     </div>
